test/libhyperion/semanticTests/errors/using_structs.hyp
pragma abicoder v2;
struct S { uint a; string b; }
error E(uint a, S s, uint b);
contract C {
    S s;
    function f(bool c) public {
        if (c) {
            s.a = 9;
            s.b = "abc";
            revert E(2, s, 7);
        } else {
            revert E({b: 7, a: 2, s: S({b: "abc", a: 9})});
        }
    }
}
// ----
// f(bool): true -> FAILURE, hex"e96e07f0", hex"00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000002", hex"000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000c0", hex"00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000007", hex"00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000009", hex"00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000080", hex"00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000003", hex"61626300000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000"
// f(bool): false -> FAILURE, hex"e96e07f0", hex"00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000002", hex"000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000c0", hex"00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000007", hex"00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000009", hex"00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000080", hex"00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000003", hex"61626300000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000"
